# bbb-video-composer

./: .gitignore  LICENSE  README.md  config.example.toml  makefile  pyproject.toml  requirements.dev.txt  requirements.txt
composer/: cli.py  composer.py  downloader.py
demo/: __main__.py  cli.py  composer.py  constants.py  download.py  downloader.py
