[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
include = ["demo"]  

[project]
name = "bbb-video-composer"
version = "0.0.0"
requires-python = ">=3.7"
dependencies = [
    "moviepy",
    "click",
]

[project.optional-dependencies]
dev = ["black", "isort"]
test = ["pytest"]